--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Bosque Municipal - Home</title>
+  <title>Zoobotânico | São José do Rio Preto</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="design/style.css">
+  <link rel="shortcut icon" href="imagens/icon.png" type="image/x-icon">
 </head>
 <body>
   <header >
@@ -24,8 +25,7 @@
           <h1>Bem-vindo ao Zoobotânico de Rio Preto <i class="fa-brands fa-pagelines" style="color: #2d6a4f;"></i></h1>
           <p class="lead">Natureza, conservação e educação ambiental. Venha conhecer nossas espécies e agende sua visita.</p>
           <div class="hero-actions">
-            <a href="about.html" class="btn">Saiba mais</a>
-            <a href="contact.html" class="btn btn-outline">Agendar visita</a>
+            <a href="https://www.riopreto.sp.gov.br/cartaservicos/meio-ambiente/pre-agendamento-zoobotanico-institucional" class="btn btn-outline" target="_blank">Agendar visita</a>
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
       </div>
     </section>
     
-    <section class="faq">
+    <section class="faq" id="faq">
   <div class="faq-card">
     <h2>FAQs</h2>
 
@@ -117,7 +117,7 @@
     <div class="faq-item">
       <button class="faq-question">Preciso fazer cadastro de todos os visitantes?</button>
       <div class="faq-answer">
-        R - Com um cadastro realizado pode trazer 04 convidados, ou seja, um cadastro permite 05 visitantes!  Faça a carona solidária e traga a lotação de um carro de passeio, colaborando para o Meio Ambiente.
+        R - Com um cadastro realizado pode trazer 04 convidados, ou seja, um cadastro permite 05 visitantes.
       </div>
     </div>
 
@@ -131,14 +131,14 @@
     <div class="faq-item">
       <button class="faq-question">Posso levar animais de estimação?</button>
       <div class="faq-answer">
-        R - Com exceção dos cães guia - devidamente identificados, os demais animais de estimação não podem entrar no Zoobotânico, para o bem da saúde dos animais silvestres e dos animais domésticos., considerando a possibilidade de transmissão de doenças.
+        R - Com exceção dos cães guia - devidamente identificados, os demais animais de estimação não podem entrar no Zoobotânico.
       </div>
     </div>
 
     <div class="faq-item">
       <button class="faq-question">Preciso imprimir o comprovante de agendamento?</button>
       <div class="faq-answer">
-        R - A bilheteria possui a listagem de quem agendou, não sendo necessário imprimir, até mesmo em preservação ao meio ambiente, pode trazer o print no seu celular do agendamento.
+        R - A bilheteria possui a listagem de quem agendou, não sendo necessário imprimir.
       </div>
     </div>
 
